--- a/invest/config.ini
+++ b/invest/config.ini
@@ -14,5 +14,18 @@ zzlurl = https://oapi.dingtalk.com/robot/send?access_token=dce87ebd6cab4755e26a2
 
 [RegularInvestment]
 hs300 = LOW
+hs300historytopindex = 5807.72
+hs300historytopdate = 2021-02-10
+hs300lasttopindex = 5807.72
+hs300lasttopdate = 2021-02-10
+hs300adjust = 1
 zz500 = TOP
+zz500historytopindex = 11000
+zz500historytopdate = 2015-6-10
+zz500lasttopindex = 5807.72
+zz500lasttopdate = 2021-02-10
+zz500adjust = 0.65
+
+
+
 
