--- a/invest/config.ini
+++ b/invest/config.ini
@@ -20,11 +20,11 @@ hs300historytopdate = 2021-02-10
 hs300lasttopindex = 5807.72
 hs300lasttopdate = 2021-02-10
 hs300adjust = 1
-zz500 = TOP
+zz500 = LOW
 zz500historytopindex = 11000
 zz500historytopdate = 2015-6-10
-zz500lasttopindex = 5807.72
-zz500lasttopdate = 2021-02-10
+zz500lasttopindex = 7305.58
+zz500lasttopdate = 2021-09-02
 zz500adjust = 0.65
 
 
